SERVER-54388 Fix variable shadowing in document_source_set_window_fields.cpp